@@ -4,6 +4,8 @@ now : current
  * Add --ecm-and-emm-only (-q) option. This allows processing of ECMs
    and EMMs but without decoding the input stream.
  * Set newcamd client id to 0x7878 (tsdecrypt).
+ * Fixed regression that apeared in 9.0 which prevented the output from
+   working if the output address was not multicast.
 
 2012-09-10 : Version 9.0
  * Add --no-output-on-error (-u) option. By using this option output can be
